--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aws-amplify": "^6.0.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-player": "^2.14.1",
     "react-scripts": "5.0.1",
     "recordrtc": "^5.6.2",
